PROD-1138 - Fix notices border and spacing issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -4668,8 +4668,9 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
 
 	}
 
-	> #bp-ajax-loader {
-		margin: 20px;
+	> #bp-ajax-loader,
+	> .bp-feedback.bp-messages {
+		margin: -1px;
 	}
 }
 
